--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -13,7 +13,6 @@ jobs:
     defaults:
       run:
         shell: bash
-    env: 
     runs-on: ubuntu-latest
     steps:
       - name: Install OpenFaaS CLI
@@ -67,7 +66,7 @@ jobs:
           
 
       - name: Create Function
-        working_directory: openfaas-hz-guide/hz-client-java
+        working-directory: openfaas-hz-guide/hz-client-java
         run: |
           eval $(minikube docker-env)
           faas-cli build -f hz-client-java-ofwatchdog.yml
@@ -77,7 +76,7 @@ jobs:
           faas-cli deploy -f hz-client-java-ofwatchdog.yml
 
       - name: Test Function
-        working_directory: openfaas-hz-guide/hz-client-java
+        working-directory: openfaas-hz-guide/hz-client-java
         run: |
           hey -n 100 -c 4 ${OPENFAAS_URL}/function/hz-client-java-ofwatchdog
 
