--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -12,7 +12,6 @@ jobs:
     defaults:
       run:
         shell: bash
-    env: 
     runs-on: ubuntu-latest
     steps:
       - name: Install OpenFaaS CLI
@@ -66,7 +65,7 @@ jobs:
           
 
       - name: Create Function
-        working_directory: openfaas-hz-guide/hz-client-python
+        working-directory: openfaas-hz-guide/hz-client-python
         run: |
           eval $(minikube docker-env)
           faas-cli build -f hz-client-python-ofwatchdog.yml
@@ -76,7 +75,7 @@ jobs:
           faas-cli deploy -f hz-client-python-ofwatchdog.yml
 
       - name: Test Function
-        working_directory: openfaas-hz-guide/hz-client-python
+        working-directory: openfaas-hz-guide/hz-client-python
         run: |
           hey -n 100 -c 4 ${OPENFAAS_URL}/function/hz-client-python-ofwatchdog
 
