--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -69,8 +69,8 @@ jobs:
         working-directory: openfaas-hz-guide/hz-client-node/of-watchdog
         run: |
           eval $(minikube docker-env)
-          sed -i "s/gateway:*/gateway: ${OPENFAAS_URL}" hz-client-node-ofwatchdog.yml
-          sed -i "s/YOUR_DOCKER_HUB_USERNAME/test-username" hz-client-node-ofwatchdog.yml
+          sed -i "s/gateway: .*/gateway: ${OPENFAAS_URL}/" hz-client-node-ofwatchdog.yml
+          sed -i "s/YOUR_DOCKER_HUB_USERNAME/test-username/" hz-client-node-ofwatchdog.yml
 
           faas-cli build -f hz-client-node-ofwatchdog.yml
           faas-cli deploy -f hz-client-node-ofwatchdog.yml
