--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -68,7 +68,7 @@ jobs:
         working-directory: openfaas-hz-guide/hz-client-python/of-watchdog
         run: |
           eval $(minikube docker-env)
-          sed -i "s/gateway: .*/gateway: ${OPENFAAS_URL}/" hz-client-python-ofwatchdog.yml
+          sed -i "s|gateway: .*|gateway: ${OPENFAAS_URL}|" hz-client-python-ofwatchdog.yml
           sed -i "s/YOUR_DOCKER_HUB_USERNAME/test-username/" hz-client-python-ofwatchdog.yml
 
           faas-cli build -f hz-client-python-ofwatchdog.yml --build-arg "TEST_ENABLED=false"
