--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -53,6 +53,7 @@ jobs:
           echo OPENFAAS_URL=${OPENFAAS_URL} >> $GITHUB_ENV
 
           export PASSWORD=$(kubectl get secret -n openfaas basic-auth -o jsonpath="{.data.basic-auth-password}" | base64 --decode; echo)
+          echo PASSWORD=${PASSWORD} >> $GITHUB_ENV
 
           echo -n $PASSWORD | faas-cli login --username admin --password-stdin
 
@@ -68,6 +69,8 @@ jobs:
         working-directory: openfaas-hz-guide/hz-client-python/of-watchdog
         run: |
           eval $(minikube docker-env)
+          echo -n $PASSWORD | faas-cli login --username admin --password-stdin
+
           sed -i "s|gateway: .*|gateway: ${OPENFAAS_URL}|" hz-client-python-ofwatchdog.yml
           sed -i "s/YOUR_DOCKER_HUB_USERNAME/test-username/" hz-client-python-ofwatchdog.yml
 
@@ -77,6 +80,8 @@ jobs:
       - name: Test Function
         working-directory: openfaas-hz-guide/hz-client-python/of-watchdog
         run: |
+          echo -n $PASSWORD | faas-cli login --username admin --password-stdin
+
           hey -n 100 -c 4 ${OPENFAAS_URL}/function/hz-client-python-ofwatchdog
 
           size=$(curl ${OPENFAAS_URL}/function/hz-client-python-ofwatchdog)
