--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Install Hey
         run: |
           wget https://hey-release.s3.us-east-2.amazonaws.com/hey_linux_amd64
+          chmod +x hey_linux_amd64
+          sudo mv hey_linux_amd64 /bin/hey
 
 
       - name: Checkout to guide
