--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -84,7 +84,7 @@ jobs:
         run: |
           echo -n $PASSWORD | faas-cli login --username admin --password-stdin
 
-          hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog
+          # hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog
 
           size=$(curl ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog)
 
