--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -83,7 +83,7 @@ jobs:
         run: |
           echo -n $PASSWORD | faas-cli login --username admin --password-stdin
 
-          hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-python-ofwatchdog
+          # hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-python-ofwatchdog
 
           size=$(curl ${OPENFAAS_URL}/function/hz-client-python-ofwatchdog)
 
