--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -71,14 +71,13 @@ jobs:
       - name: Create Function
         working-directory: openfaas-hz-guide/hz-client-java/of-watchdog
         run: |
-          eval $(minikube docker-env)
+          docker login -u {{secrets.DOCKHERHUB_USERNAME}} -p {{secrets.DOCKHERHUB_PASSWORD}}
           echo -n $PASSWORD | faas-cli login --username admin --password-stdin
 
           sed -i "s|gateway: .*|gateway: ${OPENFAAS_URL}|" hz-client-java-ofwatchdog.yml
-          sed -i "s/YOUR_DOCKER_HUB_USERNAME/test-username/" hz-client-java-ofwatchdog.yml
+          sed -i "s/YOUR_DOCKER_HUB_USERNAME/{{secrets.DOCKERHUB_USERNAME}}/" hz-client-java-ofwatchdog.yml
 
-          faas-cli build -f hz-client-java-ofwatchdog.yml
-          faas-cli deploy -f hz-client-java-ofwatchdog.yml
+          faas-cli up -f hz-client-java-ofwatchdog.yml
 
       - name: Test Function
         working-directory: openfaas-hz-guide/hz-client-java/of-watchdog
