--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -71,13 +71,17 @@ jobs:
       - name: Create Function
         working-directory: openfaas-hz-guide/hz-client-java/of-watchdog
         run: |
-          echo -n ${{secrets.DOCKERHUB_PASSWORD}} | docker login -u ${{secrets.DOCKERHUB_PASSWORD}} 
+          echo -n $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME
           echo -n $PASSWORD | faas-cli login --username admin --password-stdin
 
           sed -i "s|gateway: .*|gateway: ${OPENFAAS_URL}|" hz-client-java-ofwatchdog.yml
-          sed -i "s/YOUR_DOCKER_HUB_USERNAME/${{secrets.DOCKERHUB_USERNAME}}/" hz-client-java-ofwatchdog.yml
+          sed -i "s/YOUR_DOCKER_HUB_USERNAME/${DOCKERHUB_USERNAME}/" hz-client-java-ofwatchdog.yml
 
           faas-cli up -f hz-client-java-ofwatchdog.yml
+        env:
+          DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
+          DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
+
 
       - name: Test Function
         working-directory: openfaas-hz-guide/hz-client-java/of-watchdog
