--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -92,13 +92,13 @@ jobs:
           kubectl get all -n openfaas
           echo -n $PASSWORD | faas-cli login --username admin --password-stdin
 
-          # hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-java-ofwatchdog
+          hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-java-ofwatchdog
 
           size=$(curl ${OPENFAAS_URL}/function/hz-client-java-ofwatchdog)
 
           echo $size
 
-          if [[ $size -lte 101  && $size -gte 97 ]];
+          if [[ $size -lte 101 ]] && [[ $size -gte 97 ]];
           then
             return 0
           else
