--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -98,7 +98,7 @@ jobs:
 
           echo $size
 
-          if [[ $size -lte 101 ]] && [[ $size -gte 97 ]];
+          if [[ $size -le 101 ]] && [[ $size -ge 97 ]];
           then
             return 0
           else
