--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -100,9 +100,9 @@ jobs:
 
           if [[ $size -le 101 ]] && [[ $size -ge 97 ]];
           then
-            return 0
+            exit 0
           else
-            return 1
+            exit 1
           fi
 
 
