--- a/.github/workflows/test-java.yml
+++ b/.github/workflows/test-java.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - "hz-client-java/*"
+      - "hz-client-java/**"
       - "functions/java-handler.java"
   
 
