--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -6,6 +6,7 @@ on:
       - "hz-client-python/**"
       - "functions/python-handler.py"
 
+
 jobs:
   test-python:
     name: Test Python Client
@@ -69,31 +70,37 @@ jobs:
       - name: Create Function
         working-directory: openfaas-hz-guide/hz-client-python/of-watchdog
         run: |
-          eval $(minikube docker-env)
+          docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
           echo -n $PASSWORD | faas-cli login --username admin --password-stdin
 
           sed -i "s|gateway: .*|gateway: ${OPENFAAS_URL}|" hz-client-python-ofwatchdog.yml
-          sed -i "s/YOUR_DOCKER_HUB_USERNAME/test-username/" hz-client-python-ofwatchdog.yml
+          sed -i "s/YOUR_DOCKER_HUB_USERNAME/${DOCKERHUB_USERNAME}/" hz-client-python-ofwatchdog.yml
 
-          faas-cli build -f hz-client-python-ofwatchdog.yml --build-arg "TEST_ENABLED=false"
-          faas-cli deploy -f hz-client-python-ofwatchdog.yml
+          faas-cli up -f hz-client-python-ofwatchdog.yml
+        env:
+          DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
+          DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
 
       - name: Test Function
         working-directory: openfaas-hz-guide/hz-client-python/of-watchdog
         run: |
+          kubectl get all -n openfaas
+
+          kubectl rollout status -n openfaas-fn deployment.apps/hz-client-python-ofwatchdog 
+
           echo -n $PASSWORD | faas-cli login --username admin --password-stdin
 
-          # hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-python-ofwatchdog
+          hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-python-ofwatchdog
 
           size=$(curl ${OPENFAAS_URL}/function/hz-client-python-ofwatchdog)
 
           echo $size
 
-          if [[ $size -lte 101  && $size -gte 97 ]];
+          if [[ $size -le 101 ]] && [[ $size -ge 100 ]];
           then
-            return 0
+            exit 0
           else
-            return 1
+            exit 1
           fi
 
 
