--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -78,7 +78,7 @@ jobs:
           sed -i "s|gateway: .*|gateway: ${OPENFAAS_URL}|" hz-client-python-ofwatchdog.yml
           sed -i "s/YOUR_DOCKER_HUB_USERNAME/${DOCKERHUB_USERNAME}/" hz-client-python-ofwatchdog.yml
 
-          faas-cli up -f hz-client-python-ofwatchdog.yml
+          faas-cli up -f hz-client-python-ofwatchdog.yml --build-arg "TEST_ENABLED=false"
         env:
           DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
           DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
