--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Test Function
         working-directory: openfaas-hz-guide/hz-client-node/of-watchdog
         run: |
-          kubectl get all -n openfaas
+          kubectl get all -n openfaas-fn
 
           kubectl rollout status -n openfaas-fn deployment.apps/hz-client-node-ofwatchdog 
 
@@ -88,7 +88,7 @@ jobs:
 
           hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog
 
-          kubectl get all -n openfaas
+          kubectl get all -n openfaas-fn
 
           size=$(curl ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog)
 
