--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -84,6 +84,8 @@ jobs:
 
           kubectl rollout status -n openfaas-fn deployment.apps/hz-client-node-ofwatchdog 
 
+          kubectl get all -n openfaas-fn
+
           echo -n $PASSWORD | faas-cli login --username admin --password-stdin
 
           hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog
