--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -92,9 +92,9 @@ jobs:
 
           kubectl get all -n openfaas-fn
 
-          size_json=$(curl ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog)
+          curl ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog >> size.json
 
-          size=$(echo -n $size | jq -r '.size')
+          size=$(cat size.json | jq -r '.size')
           echo $size
 
           if [[ $size -le 101 ]] && [[ $size -ge 100 ]];
