--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Test Function
         working-directory: openfaas-hz-guide/hz-client-python/of-watchdog
         run: |
-          kubectl get all -n openfaas
+          kubectl get all -n openfaas-fn
 
           kubectl rollout status -n openfaas-fn deployment.apps/hz-client-python-ofwatchdog 
 
