--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -93,7 +93,7 @@ jobs:
           hey -n 100 -c 1 ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog
 
           curl ${OPENFAAS_URL}/function/hz-client-node-ofwatchdog >> size.json
-          size=$(cat size.json | jq -r '.size')
+          size=$(cat size.json | jq -r '.body')
           echo $size
 
           if [[ $size -le 101 ]] && [[ $size -ge 100 ]];
